// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddableComponent test camera add component workflow click the add component button, show addableComponent list 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Name
        </div>
      </div>
      <div>
        <article
          className="wonder-string-input"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="camera"
          />
        </article>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            position : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="40"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            scale : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          basicCameraView
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <div>
        simulate basic camera view
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          perspectiveCameraProjection
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <div>
        simulate perspective camera view
      </div>
    </article>
    <article
      className="wonder-addable-component"
    >
      <button
        onClick={[Function]}
      >
        Add Component
      </button>
      <div
        className="component-list"
      >
        <article
          className="wonder-addable-componentBox"
        >
          <div
            className="component-category"
          >
            <div
              className="category-header"
            >
              Mesh
            </div>
            <div
              className="category-content"
              onClick={[Function]}
            />
          </div>
        </article>
        <article
          className="wonder-addable-componentBox"
        >
          <div
            className="component-category"
          >
            <div
              className="category-header"
            >
              Rendering
            </div>
            <div
              className="category-content"
              onClick={[Function]}
            />
          </div>
        </article>
      </div>
    </article>
  </article>
</article>
`;

exports[`AddableComponent test primitive gameObject add component workflow aaaaa 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Name
        </div>
      </div>
      <div>
        <article
          className="wonder-string-input"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="cube"
          />
        </article>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            position : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            scale : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          material
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <article
        className="wonder-material"
      >
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              shader
            </span>
            <select
              onChange={[Function]}
              value="1"
            >
              <option
                value="0"
              >
                basic_material
              </option>
              <option
                value="1"
              >
                light_material
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-light-material"
          >
            <article
              className="wonder-material-color"
            >
              <div
                className=""
              >
                <span
                  className=""
                >
                  diffcuse color : 
                </span>
                <span
                  className=""
                >
                  #ffffff
                </span>
                <button
                  className=""
                  onClick={[Function]}
                >
                  pick color
                </button>
              </div>
            </article>
            <article
              className="wonder-material-texture"
            >
              <div
                className="texture_ground"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              />
              <span
                className=""
              >
                diffuse map : 
              </span>
              <img
                src="./public/img/null.jpg"
              />
              <button
                className="texture_remove"
                onClick={[Function]}
              >
                remove
              </button>
            </article>
            <article
              className="wonder-light-shininess"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Shininess : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="32"
                />
              </article>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <button
        onClick={[Function]}
      >
        Add Component
      </button>
    </article>
  </article>
</article>
`;

exports[`AddableComponent test show component else else if currentSceneTreeNode is box, should show transform and material 1`] = `
<article
  className="wonder-inspector-component"
/>
`;

exports[`AddableComponent test show component else if currentSceneTreeNode is camera, should show transform and basicCameraView and perspectiveCameraProjection 1`] = `
<article
  className="wonder-inspector-component"
/>
`;

exports[`AddableComponent test show component if hasn't currentSceneTreeNode, show nothing 1`] = `
<article
  className="wonder-inspector-component"
/>
`;
